syntax = "proto3";
package algotrader.model2;

message Frame {

    string df_id = 1;
    string provider_id = 2;
    string inst_id = 3;

    repeated string series_id_list = 10;
}
